temp commit of starting place for powermock tests